Version 1.20 August 19, 2014
------------------------------
- Added antispam test for first post on board for Newly registered members

Version 1.03 July 15, 2014
------------------------------
- Fixed javascript checking in register form

Version 1.02 June 30, 2014
------------------------------
- Fixed get remote ip when proxy used
- Fixed menu items in general_mod_settings
- Fixed bug clearing api key after mod updating

Version 1.01 March 27, 2014
------------------------------
- Initial release