@@ -264,3 +264,13 @@ function cleantalk_general_mod_settings(&$config_vars)
     $config_vars[] = array('check', 'cleantalk_first_post_checking');
     $config_vars[] = array('desc', 'cleantalk_api_key_description');
 }
+
+/**
+ * Print CleanTalk javascript verify hidden input
+ */
+function cleantalk_print_js_input()
+{
+    $id = uniqid('ct_checkjs');
+    echo '<input type="hidden" name="ct_checkjs" id="', $id, '" value="ok" />',
+        '<script type="text/javascript">document.getElementById("', $id, '").value ="', cleantalk_get_checkjs_code(), '</script>';
+}
