@@ -1,3 +1,7 @@
+Version Dev January 14, 2015
+------------------------------
+- Fixed javascript checks in quick reply form
+
 Version 1.20 August 19, 2014
 ------------------------------
 - Added antispam test for first post on board for Newly registered members
